# spa-on-blogger-api

./: .gitignore  AboutView.l-FyH7QQ.js  LICENSE  PageView.DNMff-40.css  PageView.DuP3hd83.js  PostView.BQTd7tde.css  PostView.Vw9_j7TJ.js  README.md  blogger-template.html  blogger.code-workspace  index.B0jH0Ugx.css  index.BIiP_e9C.js  index.html
.github/workflows/: python-publish-cli.yml
blogger-cli/: PYPI_PUBLISHING.md  README.md  blogger_cli.spec  pyproject.toml  setup.ps1
blogger-cli/blogger_cli/: __init__.py  blogger_test.py  export_search.py  main.py  permission_test.py
blogger-gui/: .gitignore  README.md  blogger_gui.spec  requirements.txt
blogger-gui/blogger_gui/: __init__.py  __main__.py  main.py
blogger-gui/blogger_gui/api/: __init__.py  blogger_api.py
blogger-gui/blogger_gui/ui/: __init__.py  auth_dialog.py  main_window.py  page_editor.py  pages_widget.py  post_editor.py  posts_widget.py
blogger-gui/tests/: test_blogger_api.py
blogger_api_cli/: .gitignore  PYPI_PUBLISHING.md  README.md  blogger_cli.spec  pyproject.toml
vue-blogger-spa/: .gitignore  README.md  index.html  vite.blogger-js.config.ts  vite.blogger.config.ts  vite.config.ts  vite.jsdelivr.config.ts
vue-blogger-spa/public/: index-template.html
vue-blogger-spa/scripts/: update-template.js
vue-blogger-spa/src/: App.vue
vue-blogger-spa/src/assets/: base.css  main.css
vue-blogger-spa/src/components/: BlogPostCard.vue  LoadingIndicator.vue  PagesWidget.vue  TagFilter.vue  Tooltip.vue  UIButton.vue  UIModal.vue  UITooltip.vue
vue-blogger-spa/src/composables/: useBloggerData.ts
(+10 files in other folders)
